completed url type ,title and description

--- a/styles/customer_retention/customer.css
+++ b/styles/customer_retention/customer.css
@@ -338,6 +338,11 @@ p {
   .bottom mobile {
     display: block;
   }
+  .arrow {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+  }
   .rightbottom {
     display: block;
   }
