--- a/styles/customer_retention/customer.scss
+++ b/styles/customer_retention/customer.scss
@@ -294,6 +294,9 @@ p{
     {
         display: block;
     }
+    .arrow {
+        display:flex !important;
+    }
     .rightbottom
 {
     display: block;
