--- a/styles/customer_retention/customer.scss
+++ b/styles/customer_retention/customer.scss
@@ -422,6 +422,12 @@ p{
             .social_icon_link{
                 display: none !important;
             }
+            
+            .head_theme .head_ques {
+             
+                 margin-top: -13px !important;
+             }
+
             .response-xs{
                 display: flex !important;
                 justify-content: flex-start;
