--- a/styles/customer_retention/customer.css
+++ b/styles/customer_retention/customer.css
@@ -458,6 +458,9 @@ p {
   .head_theme .head_ques {
     margin-top: -13px !important;
   }
+  .net {
+    padding-left: 0px !important;
+  }
   .ar1 {
     top: 0px !important;
   }
