--- a/styles/customer_retention/customer.scss
+++ b/styles/customer_retention/customer.scss
@@ -427,6 +427,9 @@ p{
              
                  margin-top: -13px !important;
              }
+             .net{
+                padding-left: 0px !important;
+            }
              .ar1
              {
                  top:0px !important
