--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -968,6 +968,37 @@ svg {
     padding-top: 1%;
     line-height: 2.0;
 }
+.onboard_title
+{
+    font-size     : 24px;
+    letter-spacing: 0px;
+    color         : #382F9C !important;
+    opacity       : 1;
+    font-weight   : 600;
+    font-family   : "fontGraphikMedium";   
+}
+.achieved_title
+{
+    font-size     : 20px;
+    letter-spacing: 0px;
+    color         :#212529;
+    opacity       : 1;
+    font-weight   : 580;
+    font-family   : "fontGraphikMedium";   
+}
+.achieved_content
+{
+    font-family   : "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color         : #767A82;
+    opacity       : 2;
+    font-size     : 19px;
+    font-weight   : 400;
+    opacity       : 0.9; 
+   
+    padding-top: 1%;
+    line-height: 2.0; 
+}
 .para
 {
     font-family   : "fontLatoRegular";
@@ -981,6 +1012,19 @@ svg {
     padding-right: 20%;
     padding-top: 1%;
     line-height: 2.0; 
+}
+.notification_content
+{
+    font-family   : "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color         : #767A82;
+    opacity       : 2;
+    font-size     : 19px;
+    font-weight   : 400;
+    opacity       : 0.9; 
+   
+    padding-top: 1%;
+    line-height: 2.0;   
 }
 .approach {
     .title {
@@ -1007,6 +1051,53 @@ svg {
 }
    
 }
+.li_attributes
+{
+    padding-top: 4%;
+    font-family   :"fontLatoRegular";
+    color:#FFFFFFB3;
+    font-size: 18px;
+}
+
+.approach div {
+    
+  }
+  .card{
+  right: -50px;
+  width: 100%;
+  height: auto;
+  background: #FF616E;
+  border-radius: 10px;
+  margin:6px 0px;
+  color:#fff;
+  padding:20px;
+  font-size: 17px;
+  }
+  .card1{
+  left:40%;
+  padding: 20px;
+
+  }.card2{
+  left:80%;
+  }
+  .card31{
+  left:80%;
+  position: relative;
+  }
+  .card32{
+  left: 110%;
+  }
+ 
+  .card33{
+  left:40%;
+  }
+  .card41
+  {
+    left:40%;  
+  }
+  
+    
+
 
 @media only screen and (max-width: 769px) {}
 
@@ -1054,6 +1145,18 @@ svg {
     .sub3 {
         padding-left: 20% !important;
     }
+    .card31 {
+        right: 10px;
+      }
+        .card32 {
+        right: -6px;
+    }
+         .card33{
+        right: -14px;
+    }
+           .card{
+        right: 0px;
+    }
 }
 
 @media only screen and (max-width: 378px) {
@@ -1068,7 +1171,26 @@ svg {
     .sub3 {
         padding-left: 23% !important;
     }
-}
+    .card{
+        right:-10px;
+      }
+      .card1{
+        right:-20px;
+      }
+      .card2 {
+        right: -44px;
+    }
+      .card31 {
+        right: 6px;
+    }
+       .card32 {
+        right: 16px;
+    }
+      .card33{
+    right: 6px;
+    }
+    }
+
 
 @media only screen and (max-width: 321px) {
     .sub1 {
