--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -880,7 +880,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #767A82;
         opacity       : 2;
-        font-size     : 20px;
+        font-size     : 19px;
         font-weight   : 400;
 
     }
@@ -929,7 +929,8 @@ svg {
 
     .para_row {
         padding-right: 10% !important;
-        padding-top  : 1%;
+        margin-top:-90px
+       
     }
 
     .para_1 {
@@ -939,9 +940,10 @@ svg {
         letter-spacing: 0.3px;
         color         : #FFFFFF;
         opacity       : 2;
-        font-size     : 18px;
+        font-size     : 19px;
         font-weight   : 400;
         opacity       : 0.7;
+       
 
     }
 }
