--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1,5 +1,6 @@
 body {
   overflow-x: hidden !important;
+  width: 100% !important;
 }
 
 .pri:hover {
@@ -1017,6 +1018,10 @@ svg {
 }
 
 @media only screen and (max-width: 426px) {
+  body {
+    overflow-x: hidden !important;
+    width: 100% !important;
+  }
   .section_2 {
     margin-left: -15px !important;
   }
@@ -1030,8 +1035,23 @@ svg {
     font-size: 17px;
     font-weight: 400;
   }
+  .head_details1 .para_row {
+    padding-right: 0% !important;
+    padding-top: 1%;
+  }
   .section_4 {
     padding: 25px 25px 25px 25px !important;
+  }
+  .achieved_content {
+    font-family: "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color: #767A82;
+    opacity: 2;
+    font-size: 19px;
+    font-weight: 400;
+    opacity: 0.9;
+    padding-top: 0% !important;
+    line-height: 2.0;
   }
   .web_launch {
     display: none !important;
@@ -1040,6 +1060,30 @@ svg {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
+  }
+  .dashboard {
+    padding: 20px 20px 20px 20px !important;
+    height: 430px !important;
+  }
+  .para {
+    font-family: "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color: #767A82;
+    opacity: 2;
+    font-size: 17px;
+    font-weight: 400;
+    opacity: 0.9;
+    padding-left: 0%;
+    padding-right: 0%;
+    padding-top: 0%;
+    line-height: 2.0;
+  }
+  .curved_dottedline {
+    display: none !important;
+  }
+  .img_dashboard {
+    bottom: 0px !important;
+    top: 20px !important;
   }
   .head_details1 .para_1 {
     line-height: 2.2rem;
@@ -1059,8 +1103,51 @@ svg {
   .container {
     margin-top: 0px !important;
   }
+  .resulttop {
+    left: 70px !important;
+  }
+  .greendot {
+    width: 50% !important;
+  }
+  .result_container {
+    padding: 30px !important;
+  }
+  .notification1 {
+    margin-top: 5% !important;
+    padding: 2%;
+    font-size: 18px !important;
+  }
+  .notification_content {
+    font-family: "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color: #767A82;
+    opacity: 2;
+    font-size: 17px;
+    font-weight: 400;
+    opacity: 0.9;
+    padding-top: 0%;
+    line-height: 2.0;
+    margin-top: 0% !important;
+  }
+  .qr {
+    padding: 20px !important;
+    height: 383px !important;
+  }
   .approach_whole {
     display: none !important;
+  }
+  .family_details {
+    font-family: "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color: #767A82;
+    opacity: 2;
+    font-size: 17px;
+    font-weight: 400;
+    opacity: 0.9;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-top: 0%;
+    line-height: 2.0;
   }
   .frst_title {
     margin-top: 100px;
@@ -1075,6 +1162,9 @@ svg {
     font-size: 35px;
     color: #222C5D;
     opacity: 1;
+  }
+  .quick {
+    margin-top: 10% !important;
   }
   .fa_icon {
     margin-top: 0px;
@@ -1109,6 +1199,22 @@ svg {
   }
   .card {
     right: 0px;
+  }
+  .head_details2 .para_row {
+    padding-right: 0% !important;
+    margin-top: -90px;
+  }
+  .head_details2 .para_1 {
+    margin-top: 66px !important;
+    line-height: 2.0rem;
+    text-align: left;
+    font-family: "fontLatoRegular";
+    letter-spacing: 0.3px;
+    color: #FFFFFF;
+    opacity: 2;
+    font-size: 17px !important;
+    font-weight: 400;
+    opacity: 0.7;
   }
 }
 
