--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1017,6 +1017,39 @@ svg {
   display: block;
 }
 
+@media only screen and (max-width: 1026px) {
+  .section_2 {
+    margin-left: -22px !important;
+  }
+  .recep_1 {
+    bottom: 92px !important;
+  }
+  .web_launch {
+    height: 450px !important;
+  }
+}
+
+@media only screen and (max-width: 769px) {
+  .section_2 {
+    margin-left: -22px !important;
+  }
+  .web_launch {
+    display: none !important;
+  }
+  .mobile_launch {
+    display: -webkit-box !important;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    height: 650px !important;
+  }
+  .notification1 {
+    margin-top: 10% !important;
+  }
+  .approach_whole {
+    display: none !important;
+  }
+}
+
 @media only screen and (max-width: 426px) {
   body {
     overflow-x: hidden !important;
