--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1103,9 +1103,43 @@ svg {
       display: block;
   }
     
+  @media only screen and (max-width: 1026px) {
+    .section_2
+    {
+        margin-left:-22px !important;
+    }
+    .recep_1
+    {
+        bottom:92px !important;
+    }
+    .web_launch
+    {
+       height:450px !important;
+    }
+  }
 
-
-@media only screen and (max-width: 769px) {}
+@media only screen and (max-width: 769px) {
+    .section_2
+    {
+        margin-left:-22px !important;
+    }
+    .web_launch
+    {
+        display:none !important;
+    }
+    .mobile_launch
+    {
+        display:flex !important;
+        height:650px !important;
+    }
+    .notification1{
+        margin-top:10% !important;
+    }
+    .approach_whole
+    {
+        display: none !important;
+    }
+}
 
 @media only screen and (max-width: 426px) {
 
@@ -1158,6 +1192,7 @@ svg {
     .mobile_launch
     {
         display:flex !important;
+       
        
     }
     .dashboard
