worked on responsive

--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -1093,6 +1093,7 @@ svg {
     display: -webkit-box !important;
     display: -ms-flexbox !important;
     display: flex !important;
+    height: 480px !important;
   }
   .dashboard {
     padding: 20px 20px 20px 20px !important;
