--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1103,6 +1103,12 @@ svg {
       display: block;
   }
     
+  @media only screen and (max-width: 1442px) {
+    .section_2
+    {
+        margin-left:50px !important;
+    }
+}
   @media only screen and (max-width: 1026px) {
     .section_2
     {
