--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -800,7 +800,7 @@ svg {
         height          : 50px;
         text-align      : center;
         width           : 50px;
-        background-color: #382F9C0D;
+        background-color: #FFFFFF;
         vertical-align  : middle;
         border          : 1px solid #222C5D1A;
     }
@@ -813,7 +813,7 @@ svg {
         border-radius   : 50px;
         position        : absolute;
         left            : 0px;
-        background-color: #382F9C0D;
+       
         height          : 50px;
         text-align      : center;
         width           : 50px;
@@ -881,7 +881,7 @@ svg {
         letter-spacing: 0.3px;
         color         : #767A82;
         opacity       : 2;
-        font-size     : 19px;
+        font-size     : 20px;
         font-weight   : 400;
 
     }
