--- a/styles/csk/csk.css
+++ b/styles/csk/csk.css
@@ -212,4 +212,57 @@
   color: #191710;
   font-size: 16px;
 }
+
+.wireframes_title {
+  color: #444444;
+  font-size: 40px;
+  font-weight: bold;
+  font-family: "fontGraphikBold";
+}
+
+.shop {
+  width: 100%;
+  margin-left: 70px;
+}
+
+.view {
+  width: 100%;
+}
+
+.web {
+  width: 100%;
+  margin-left: -80px;
+}
+
+.my_whistle {
+  width: 100%;
+  margin-left: 73px;
+  position: relative;
+  top: -60px;
+}
+
+.whistles_from {
+  width: 100%;
+  position: relative;
+  top: -220px;
+}
+
+.web1920 {
+  width: 100%;
+  margin-left: -80px;
+  position: relative;
+  top: -240px;
+}
+
+.csk_landing {
+  position: relative;
+  top: -325px;
+}
+
+.number90 {
+  width: 50%;
+  position: relative;
+  top: -450px;
+  margin-left: 80px;
+}
 /*# sourceMappingURL=csk.css.map */
