--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -704,6 +704,14 @@ svg {
   background-color: #665CD7;
 }
 
+.first_section {
+  margin-top: 100px;
+}
+
+.colomn_div {
+  margin-top: 3%;
+}
+
 .frst_title {
   margin-top: 200px;
 }
@@ -732,6 +740,9 @@ svg {
   width: 50px;
   background-color: #FFFFFF;
   vertical-align: middle;
+  border: 1px solid #222C5D1A;
+  -webkit-box-shadow: 1px 2px 0px #222C5D1A;
+          box-shadow: 1px 2px 0px #222C5D1A;
   border: 1px solid #222C5D1A;
 }
 
@@ -766,6 +777,23 @@ svg {
   opacity: 1;
   font-family: "fontNova";
   font-size: 15px;
+}
+
+.icons_ {
+  width: 22px;
+  margin: auto;
+}
+
+.sub1 {
+  padding-left: 20%;
+}
+
+.sub2 {
+  padding-left: 10%;
+}
+
+.sub3 {
+  padding-left: 18%;
 }
 
 .about_head {
@@ -1016,6 +1044,18 @@ svg {
   display: block;
 }
 
+.phone_1 {
+  position: relative;
+  left: 50px;
+  width: 100%;
+}
+
+.phone_2 {
+  position: relative;
+  right: 60px;
+  width: 100%;
+}
+
 @media only screen and (max-width: 1442px) {
   .section_2 {
     margin-left: 50px !important;
@@ -1027,7 +1067,8 @@ svg {
     margin-left: -22px !important;
   }
   .recep_1 {
-    bottom: 92px !important;
+    bottom: 0px !important;
+    margin-top: 45px;
   }
   .web_launch {
     height: 450px !important;
