--- a/styles/csk/csk.css
+++ b/styles/csk/csk.css
@@ -139,10 +139,11 @@
 }
 
 .index_image {
-  width: 120%;
-  height: 120%;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+  margin-top: 42px;
 }
 
 .rebranding_head {
@@ -234,6 +235,18 @@
   margin-left: -80px;
 }
 
+.result_head {
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.result_definition {
+  font-size: 16px;
+  line-height: 3.0rem;
+  color: #BDBDBD;
+  font-weight: 580;
+}
+
 .my_whistle {
   width: 100%;
   margin-left: 73px;
@@ -262,7 +275,61 @@
 .number90 {
   width: 50%;
   position: relative;
-  margin-top: -10px;
+  margin-top: -110px;
   margin-left: 80px;
+}
+
+._cards {
+  margin-left: 6%;
+}
+
+.first_img {
+  width: 78%;
+  position: relative;
+  margin-top: 200px;
+  margin-left: 15%;
+}
+
+.second_img {
+  width: 80%;
+}
+
+.third_img {
+  width: 80%;
+  position: relative;
+  margin-top: 200px;
+  margin-left: -15%;
+}
+
+.fourth_img {
+  width: 80%;
+  position: relative;
+  margin-top: 50px;
+  margin-left: 15%;
+}
+
+.fifth_img {
+  width: 80%;
+  position: relative;
+  margin-top: -150px;
+}
+
+.six_img {
+  width: 80%;
+  position: relative;
+  margin-top: 50px;
+  margin-left: -15%;
+}
+
+.row_class {
+  display: "flex";
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.column_class {
+  display: "flex";
+  background-color: #ffffff;
 }
 /*# sourceMappingURL=csk.css.map */
