--- a/styles/csk/csk.css
+++ b/styles/csk/csk.css
@@ -332,4 +332,32 @@
   display: "flex";
   background-color: #ffffff;
 }
+
+.card {
+  width: 1100px;
+  border: none;
+  background: #FFFAE5 0% 0% no-repeat padding-box;
+}
+
+.images_component {
+  width: 100%;
+}
+
+.images_component1 {
+  width: 100%;
+  height: 88%;
+  margin-top: 7px;
+}
+
+.images_component_2 {
+  width: 272px;
+}
+
+.images_component_3 {
+  width: 100%;
+}
+
+.images_component_4 {
+  width: 272px;
+}
 /*# sourceMappingURL=csk.css.map */
