--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -878,7 +878,7 @@ svg {
     text-align:left;
     justify-content:left;
     margin-left:95px;
-    background: url(images/Locuscare\ Assessts/Group5216.svg);
+    
 }
 
 .about_head {
@@ -1169,13 +1169,25 @@ svg {
   @media only screen and (max-width: 1442px) {
     .section_2
     {
-        margin-left:50px !important;
+        margin-left:0px !important;
+        padding: 0px 20px !important;
     }
 }
   @media only screen and (max-width: 1026px) {
     .section_2
     {
         margin-left:-22px !important;
+    }
+    .first_se
+    {
+        padding:0px 52px;
+    }
+    .resulttop{
+        
+            float: right;
+            position: relative;
+            bottom: 23px;
+        }
     }
     .recep_1
     {
@@ -1194,7 +1206,7 @@ svg {
     margin-left: 0px;
     height: 643px !important;
     }
-  }
+  
 
 @media only screen and (max-width: 769px) {
     .section_2
