worked with space in launch

--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1192,11 +1192,10 @@ svg {
     .recep_1
     {
         bottom:0px !important;
-        margin-top: 45px;
+        margin-top: 0px;
     }
-    .web_launch
-    {
-       height:450px !important;
+    .web_launch {
+        height: 550px !important;
     }
     .qr_code{
         background: #2B2756;
