--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1164,7 +1164,14 @@ svg {
     margin-left:0px;
     margin-top:4% !important 
   }
-  
+  .web_launch {
+    height: 600px !important;
+}
+.recep_1 {
+    bottom: 0px;
+    margin-top: 0px;
+    position: relative;
+}
     
   @media only screen and (max-width: 1442px) {
     .section_2
@@ -1189,13 +1196,12 @@ svg {
             bottom: 23px;
         }
     }
-    .recep_1
-    {
-        bottom:0px !important;
-        margin-top: 0px;
+    .recep_1 {
+        bottom: 0px;
+        margin-top: 58px;
     }
     .web_launch {
-        height: 550px !important;
+        height: 450px;
     }
     .qr_code{
         background: #2B2756;
