--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -1179,8 +1179,11 @@ svg {
         margin-left:0px !important;
         padding: 0px 20px !important;
     }
+    .web_launch {
+        height: 600px !important;
+    }
 }
-  @media only screen and (max-width: 1026px) {
+  @media only screen and (max-width: 1025px) {
     .section_2
     {
         margin-left: 2px !important;
@@ -1195,13 +1198,13 @@ svg {
             position: relative;
             bottom: 23px;
         }
-    }
+    
     .recep_1 {
         bottom: 0px;
-        margin-top: 58px;
+        margin-top: 78px;
     }
     .web_launch {
-        height: 450px;
+        height: 450px !important;
     }
     .qr_code{
         background: #2B2756;
@@ -1211,8 +1214,7 @@ svg {
     margin-left: 0px;
     height: 643px !important;
     }
-  
-
+}
 @media only screen and (max-width: 769px) {
     .section_2
     {
