worked on responsive edit

--- a/styles/casestudy/casestudy.css
+++ b/styles/casestudy/casestudy.css
@@ -1340,7 +1340,7 @@ body {
   }
 }
 
-@media only screen and (max-width: 426px) {
+@media only screen and (max-width: 450px) {
   .line {
     max-width: 40px;
     padding: 0px;
@@ -1449,6 +1449,14 @@ body {
   }
   .link {
     margin-top: 10px;
+  }
+}
+
+@media only screen and (min-width: 377px) and (max-width: 412px) {
+  .button_1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
 
