worked on changes

--- a/styles/casestudy/casestudy.scss
+++ b/styles/casestudy/casestudy.scss
@@ -1447,6 +1447,13 @@ font-family: "fontLatoRegular";
        
        
     } 
+    .section_Managed {
+        margin-top: 0px;
+        background-color: #F27D350D;
+        height: 830px;
+        padding: 30px 30px 30px 30px;
+        border-radius: 25px;
+    }
 }
 @media only screen and (max-width: 376px)
 {
