--- a/styles/casestudy/casestudy.css
+++ b/styles/casestudy/casestudy.css
@@ -1450,6 +1450,13 @@ body {
     display: -ms-flexbox;
     display: flex;
   }
+  .section_Managed {
+    margin-top: 0px;
+    background-color: #F27D350D;
+    height: 830px;
+    padding: 30px 30px 30px 30px;
+    border-radius: 25px;
+  }
 }
 
 @media only screen and (max-width: 376px) {
