--- a/styles/csk/csk.scss
+++ b/styles/csk/csk.scss
@@ -108,6 +108,7 @@
     text-align: center;
     font-size: 60px;
     font-weight: bold;
+    padding: 0px 150px;
     
     /* font-size: 50px; */
   }
@@ -124,7 +125,7 @@
       line-height: 2.5rem;
       font-family: "fontNova";
       color: #848484;
-      font-weight: 400;
+      font-weight: 700;
   }
   .rebranding_child
   {
@@ -167,7 +168,7 @@
     width: 100%;
     height: 100%;
     
-    margin-top: 0px;
+    margin-top: 30px;
   }
   .rebranding_head {
     padding: 70px 0px 10px 0px;
@@ -187,8 +188,8 @@
     background-color: #44444405;
   }
   .typography_p_image {
-    height: inherit;
-    width: inherit;
+    height: 100%;
+    width: 100%;
   }
   .typography_div {
     display: flex;
@@ -363,9 +364,17 @@
   height:88%;
   margin-top:7px;
 }
+.mobile
+{
+  display:none;
+}
 .img_section
 {
   padding: 0px;
+}
+.seveen_img
+{
+  display: none;
 }
 
 .img_main
@@ -403,6 +412,7 @@
   margin-top: 40px;
   font-family: "fontGraphikBold";
   font-size: 40px;
+  margin-left: 13px;
 }
 .first_component_sec
 {
@@ -437,6 +447,15 @@
   border-radius: 10px;
   margin-left:4px;
 
+}
+.slider
+{
+  
+}
+.before-effect-main-div {
+
+  margin-top:0px !important;
+  height:550px !important;
 }
 @media only screen and (max-width: 1025px) {
 
@@ -556,5 +575,449 @@
   position: relative;
   margin-top: -105px;
   margin-left: 53px;
+}
+}
+.before-effect-main-div { /* plugin main div */
+  position: relative;
+  overflow: hidden;
+  width:100%;
+  margin:70px auto 0;
+  border-radius:5px;
+}
+
+.before-effect-main-div img { /* it's images */
+  width: 100%;
+  display:block;
+  pointer-events: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.before-effect-resizable-div { /* resizable div*/
+  position: absolute;
+  top:0;
+  left: 0;
+  overflow: hidden;
+}
+
+.before-effect-line { /* Tha seperator line */
+  position:absolute; 
+  left:50%;
+  top:0;
+  bottom:0;
+  /*width:4px;*/
+  margin-left:-2px;
+  background: var(--LineColor);
+  Cursor: var(--Cursor);
+}
+
+.before-effect-line:after {  /* Line middle button */
+  text-align: center;
+  position: absolute;
+  color:var(--IconColor);
+  top: var(--IconPosT);
+  right: var(--IconPosR);
+  width: 56px;
+  height: 56px;
+  margin: -28px 0 0 -28px;
+  transition: all 0.2s;
+  content:var(--icon);
+  background-image: linear-gradient(180deg, var(--buttonG1) 0%, var(--buttonG2) 100%);
+  border: 1px solid var(--ButtonBorder);
+  background-size:56px;
+  border-radius: var(--ButtonRaduis);
+  font-size: var(--IconSize);
+  line-height: 52px;
+  box-sizing: border-box;
+}
+
+.before-effect-line:hover:after { /* let's scale button on hover! */
+  transform: scale(1.03);
+}
+
+.dragging:hover:after { /* it's dragging !!! */
+  transform: scale(1.03) translateY(2px);
+}
+
+
+.before-effect-button { /* slider buttons */
+  position: absolute;
+  bottom: 0;
+  background: #121212;
+  color: #fff;
+  pointer-events: none;
+  border-radius: .2rem;
+  padding: 2px 10px;
+  margin: 1rem;
+  font-size: 1em;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;  
+  -o-user-select: none;
+  user-select: none;
+}
+
+.before-effect-button-right { /* Tha before one! */
+  right: 0;
+  display: none;
+
+} 
+
+.after-effect-button { /* Tha before one! */
+  /*z-index: 9;*/
+  display: none;
+}
+
+@media screen and (max-width: 1000px) { /* some responsive */
+.before-effect-line:after { 
+  width: 28px; 
+  height: 28px; 
+  margin: -14px 0 0 -14px; 
+  font-size: 12px; 
+  line-height: 26px; 
+}
+}
+
+
+@media only screen and (max-width: 426px)
+{
+  .Title_details {
+    font-size: 15px;
+    line-height: 2.3rem;
+    font-family: "fontNova";
+    color: #848484;
+    font-weight: 700;
+}
+.index_head{
+  margin-top: 30px !important;
+  
+}
+.index_head_type {
+  color: #444444;
+  font-size: 14px;
+}
+.understanding_title {
+  color: #0066b3;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  padding: 0px 11px;
+  /* font-size: 50px; */
+}
+.first_img {
+  width: 95%;
+  position: relative;
+  margin-top: -44px;
+  margin-left: 0%;
+}
+.second_img {
+  width: 95%;
+  margin-top: 40px;
+}
+.third_img {
+  width: 95%;
+  position: relative;
+  margin-top: -50px;
+  margin-left: 0%;
+}
+.fifth_img {
+  width: 95%;
+  position: relative;
+  margin-top: -266px;
+}
+.fourth_img {
+  float:right !important;
+}
+.six_img {
+ display:none;
+}
+.seveen_img
+{
+  display: block;
+  width: 95%;
+  position: relative;
+  margin-top: -266px;
+}
+.web
+{
+  display:none;
+}
+.rebran
+{
+  padding:0px 50px;
+}
+.before-effect-main-div {
+  margin-top: 0px !important;
+  height: auto !important;
+}
+.typography_p_image {
+  height: 100px;
+  width: 100px;
+}
+
+.typography_heading {
+  color: #191710;
+  font-size: 30px;
+  letter-spacing: 0px;
+  font-weight: bold;
+}
+.typography_bold_text {
+  color: #191710;
+  font-size: 13px;
+  font-weight: bold;
+  font-family: "fontNova";
+}
+.typography_semibold_text {
+  color: #848484;
+  font-size: 13px;
+  font-family: "fontNova";
+}
+.typography_bold_text_1 {
+  color: #191710;
+  font-size: 13px;
+  font-family: "fontNova";
+}
+.rebranding_text {
+  color: #444444;
+  font-size: 34px;
+  text-align: center;
+}
+.sec_1
+{
+  justify-content: center !important;
+}
+.pri_sec
+{
+  font-weight: bold;
+    color: #848484;
+    font-size: 16px;
+    text-align: center;
+}
+.rebranding_content {
+  font-size: 14px;
+  color: #848484;
+  text-align: center;
+  padding: 0px 0px 0px 0px;
+  font-family: "fontNova";
+  line-height: 2.3rem;
+  padding-bottom: 0px;
+}
+.typo{
+  background-position-x: right;
+    background-position: 100% 13% !important;
+    background-size: 30%;
+}
+.shop {
+  width: 100%;
+  margin-left: 20px;
+}
+.view{
+  width: 100%;
+  margin-left: -20px;
+}
+.whistles_from {
+  width: 100%;
+  position: relative;
+  margin-top: -121px;
+  margin-left: -20px;
+}
+.web1920 {
+  width: 100%;
+  margin-left: 27px;
+  position: relative;
+  margin-top: -29px;
+}
+.my_whistle {
+  width: 100%;
+  margin-left: 19px;
+  position: relative;
+  margin-top: -35px;
+}
+.csk_landing {
+  position: relative;
+  margin-top: -411px;
+  margin-left: -20px;
+}
+.number90 {
+  width: 50%;
+  position: relative;
+  margin-top: -359px;
+  margin-left: 22px;
+}
+.im
+{
+  width:100% !important;
+}
+.images_component1 {
+  width: 100%;
+  height: 85%;
+  margin-top: 7px;
+}
+.img_main {
+  margin-left: 0px;
+}
+.result_head {
+  font-size: 30px;
+  font-weight: bold;
+}
+.result_definition {
+  font-size: 15px;
+  line-height: 2.0rem;
+  color: #8f8f8f;
+  font-weight: 580;
+  font-family: "fontNova";
+  margin-top: 20px;
+}
+.footer {
+  padding-bottom: 0% !important;
+  padding-top: 0% !important;
+}
+.index_head_content {
+  color: #a9a9a9;
+  font-size: 11px;
+  font-family: "fontNova";
+  margin-top: -8px;
+}
+.title_1 {
+  font-size: 15px;
+  font-family: "fontGraphikBold";
+  margin-left: 0px;
+  margin-bottom: 10px;
+}
+
+
+.component_title {
+    margin-top: 40px;
+    font-family: "fontGraphikBold";
+    font-size: 40px;
+    margin-left: 4px;
+}
+
+.fourth_img {
+    width: 95%;
+    position: relative;
+    margin-top: 33px;
+    margin-left: 0%;
+}
+}
+@media only screen and (max-width: 376px)
+{
+  .index_head_type {
+    color: #444444;
+    font-size: 13px;
+}
+.fifth_img {
+  width: 95%;
+  position: relative;
+  margin-top: -225px;
+}
+.seveen_img {
+  display: block;
+  width: 95%;
+  position: relative;
+  margin-top: -228px;
+}
+.typo{
+  background-position-x: right;
+    background-position: 100% 16% !important;
+    background-size: 30%;
+}
+.component_title {
+  margin-top: 40px;
+  font-family: "fontGraphikBold";
+  font-size: 40px;
+  margin-left: 4px;
+}
+.csk_landing {
+  position: relative;
+  margin-top: -355px;
+  margin-left: -20px;
+}
+.number90 {
+  width: 50%;
+  position: relative;
+  margin-top: -338px;
+  margin-left: 16px;
+}
+
+
+.component_title {
+    margin-top: 40px;
+    font-family: "fontGraphikBold";
+    font-size: 30px;
+    margin-left: 4px;
+}
+
+.title_1 {
+    font-size: 15px;
+    font-family: "fontGraphikBold";
+    margin-left: 0px;
+    margin-bottom: 10px;
+}
+}
+@media only screen and (max-width: 321px)
+{
+  .fifth_img {
+    width: 95%;
+    position: relative;
+    margin-top: -168px;
+}
+.seveen_img {
+  display: block;
+  width: 95%;
+  position: relative;
+  margin-top: -167px;
+}
+.typo{
+  background-position-x: right;
+    background-position: 100% 19% !important;
+    background-size: 30%;
+}
+.typography_heading {
+  color: #191710;
+  font-size: 26px;
+  letter-spacing: 0px;
+  font-weight: bold;
+}
+.component_title {
+  margin-top: 40px;
+  font-family: "fontGraphikBold";
+  font-size: 30px;
+  margin-left: 4px;
+}
+.whistles_from {
+  width: 100%;
+  position: relative;
+  margin-top: -104px;
+  margin-left: -20px;
+}
+.csk_landing {
+  position: relative;
+  margin-top: -319px;
+  margin-left: -20px;
+}
+.number90 {
+  width: 50%;
+  position: relative;
+  margin-top: -293px;
+  margin-left: 9px;
+}
+
+
+.web1920 {
+    width: 100%;
+    margin-left: 27px;
+    position: relative;
+    margin-top: -17px;
+}
+
+.my_whistle {
+    width: 100%;
+    margin-left: 19px;
+    position: relative;
+    margin-top: -21px;
 }
 }
