--- a/styles/csk/csk.css
+++ b/styles/csk/csk.css
@@ -88,7 +88,12 @@
   margin: auto;
 }
 
-.title {
+.title_web {
+  text-align: left;
+}
+
+.title_mobile {
+  display: none;
   text-align: left;
 }
 
@@ -113,6 +118,10 @@
   font-weight: bold;
   padding: 0px 150px;
   /* font-size: 50px; */
+}
+
+.mobile_first {
+  display: none;
 }
 
 .Csk_title {
@@ -711,14 +720,23 @@
   .index_head {
     margin-top: 30px !important;
   }
+  .tit {
+    padding: 15px 0px 10px 3px;
+  }
+  .web_first {
+    display: none;
+  }
+  .mobile_first {
+    display: block;
+  }
   .index_head_type {
     color: #444444;
-    font-size: 14px;
+    font-size: 16px;
   }
   .understanding_title {
     color: #0066b3;
     text-align: center;
-    font-size: 30px;
+    font-size: 39px;
     font-weight: bold;
     padding: 0px 11px;
     /* font-size: 50px; */
@@ -738,6 +756,14 @@
     position: relative;
     margin-top: -50px;
     margin-left: 0%;
+  }
+  .title_web {
+    text-align: left;
+    display: none;
+  }
+  .title_mobile {
+    display: block;
+    text-align: left;
   }
   .fifth_img {
     width: 95%;
@@ -792,10 +818,15 @@
     font-size: 13px;
     font-family: "fontNova";
   }
-  .rebranding_text {
+  .rebranding_text_1 {
     color: #444444;
     font-size: 34px;
     text-align: center;
+  }
+  .rebranding_text {
+    color: #444444;
+    font-size: 34px;
+    text-align: left;
   }
   .sec_1 {
     -webkit-box-pack: center !important;
@@ -811,7 +842,7 @@
   .rebranding_content {
     font-size: 14px;
     color: #848484;
-    text-align: center;
+    text-align: left;
     padding: 0px 0px 0px 0px;
     font-family: "fontNova";
     line-height: 2.3rem;
@@ -970,6 +1001,16 @@
     position: relative;
     margin-top: -168px;
   }
+  .rebranding_text_1 {
+    color: #444444;
+    font-size: 26px;
+    text-align: left;
+  }
+  .rebranding_text {
+    color: #444444;
+    font-size: 26px;
+    text-align: center;
+  }
   .seveen_img {
     display: block;
     width: 95%;
@@ -978,7 +1019,7 @@
   }
   .typo {
     background-position-x: right;
-    background-position: 100% 19% !important;
+    background-position: 100% 17% !important;
     background-size: 30%;
   }
   .typography_heading {
@@ -1021,6 +1062,11 @@
     margin-left: 19px;
     position: relative;
     margin-top: -21px;
+  }
+  .rebranding_text {
+    color: #444444;
+    font-size: 26px;
+    text-align: center;
   }
 }
 /*# sourceMappingURL=csk.css.map */
