--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -435,7 +435,7 @@
             text-align    : left;
             margin-top    : 30px;
             letter-spacing: 1px;
-            color         : #9297A5;
+            color         : #595959;
             opacity       : 1;
             font-family   : "fontLatoRegular";
                 font-weight   : 400;
@@ -565,7 +565,7 @@
         text-align: left;
 
         letter-spacing: 1px;
-        color         : #9297A5;
+        color         : #595959;
         opacity       : 1;
         font-family   : "fontLatoRegular";
         font-weight   : 400;
@@ -691,7 +691,7 @@
         text-align    : left;
         margin-top    : 20px;
         letter-spacing: 1px;
-        color         : #9297A5;
+        color         : #595959;
         opacity       : 1;
         font-family   : "fontLatoRegular";
                 font-weight   : 400;
@@ -770,7 +770,7 @@
             text-align    : left;
             margin-top    : 30px;
             letter-spacing: 1px;
-            color         : #9297A5;
+            color         : #595959;
             opacity       : 1;
             font-family   : "fontLatoRegular";
                 font-weight   : 400;
@@ -825,29 +825,29 @@
     }
 
     .index_head .title_web .healthcare {
-        font-family   : "fontavenirmedium";
+        font-family   : "fontLatoRegular";
         letter-spacing: 0px;
         color         : #F27D35;
         opacity       : 1;
-        font-size     : 22px;
+        font-size     : 19px;
     }
 
     .index_head .title_web .managed_care_title {
         letter-spacing: 2.22px;
         color         : #363A57;
         opacity       : 1;
-        font-size     : 48px;
-        font-family   : "fontcalisto";
+        font-size     : 46px;
+        font-family   : "fontGraphikSemibold";
     }
 
     .blue_section .first_one .our_approach {
         margin-top    : 80px;
         text-align    : center;
-        font-family   : "fontcalisto";
+        font-family   : "fontGraphikSemibold";
         letter-spacing: 2.22px;
         color         : #FFFFFF;
         opacity       : 1;
-        font-size     : 50px;
+        font-size     : 46px;
     }
 
     .blue_section .fifth_one .launch_title {
@@ -875,4 +875,42 @@
         font-size     : 46px;
         font-family   : "fontGraphikSemibold";
     }
+
+
+
+
+    .index_head .title_web .Title_details {
+        text-align: left;
+        margin-top: 20px;
+        letter-spacing: 1px;
+        color: #595959;
+        opacity: 1;
+        font-family: "fontLatoRegular";
+        line-height: 2.1;
+        font-weight: 400;
+        font-size: 18px;
+    }
+
+    .index_head .title_web .Title_details_1 {
+        text-align: left;
+        margin-top: 20px;
+        letter-spacing: 1px;
+        color: #595959;
+        opacity: 1;
+        line-height: 2.1;
+        font-family: "fontLatoRegular";
+        font-weight: 400;
+        font-size: 18px;
+    }
+    .index_head .title_web .platform_deliverables .common_description {
+        top: 15px;
+        position: relative;
+        letter-spacing: 0.66px;
+        color: #363A57;
+        opacity: 1;
+        font-family: "fontGraphikSemibold";
+        font-size: 15px;
+        font-weight: bold;
+    }
+    
 }
