--- a/styles/casestudy/casestudy.scss
+++ b/styles/casestudy/casestudy.scss
@@ -829,14 +829,14 @@ body{
     font-size:60px;
     color:#665CD7;
     font-weight: 300;
-    font-family: "fontcalisto";
+   font-family: "fontGraphikBold";
 }
 .second 
 {
 font-size:60px;
 color:#363A57;
 font-weight: 300;
-font-family: "fontcalisto";
+font-family: "fontGraphikBold";
 }
 .content_study
 {
@@ -854,7 +854,7 @@ font-family: "fontcalisto";
 }
 .para_content
 {
-    font-family: "fontavenirmedium";
+    font-family: "fontLatoRegular";
     font-size: 18px;
     line-height: 1.7;
     margin-left: -20px;
