--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -39,47 +39,47 @@ body {
 
 @font-face {
   font-family: "fontGraphikBold";
-  src: url("../plugin/fonts/graphik/GraphikBold.otf");
+  src: url("../../plugin/fonts/graphik/GraphikBold.otf");
 }
 
 @font-face {
   font-family: "fontGraphikMedium";
-  src: url("../plugin/fonts/graphik/GraphikMedium.otf");
+  src: url("../../plugin/fonts/graphik/GraphikMedium.otf");
 }
 
 @font-face {
   font-family: "fontGraphikLight";
-  src: url("../plugin/fonts/graphik/GraphikLight.otf");
+  src: url("../../plugin/fonts/graphik/GraphikLight.otf");
 }
 
 @font-face {
   font-family: "fontGraphikSemibold";
-  src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
+  src: url("../../plugin/fonts/graphik/GraphikSemibold.otf");
 }
 
 @font-face {
   font-family: "fontGraphikRegular";
-  src: url("../plugin/fonts/graphik/GraphikRegular.otf");
+  src: url("../../plugin/fonts/graphik/GraphikRegular.otf");
 }
 
 @font-face {
   font-family: "fontNova";
-  src: url("../plugin/fonts/HKNova-Medium.otf");
+  src: url("../../plugin/fonts/HKNova-Medium.otf");
 }
 
 @font-face {
   font-family: "fontLatoRegular";
-  src: url("../plugin/fonts/lato/Lato-Regular.ttf");
+  src: url("../../plugin/fonts/lato/Lato-Regular.ttf");
 }
 
 @font-face {
   font-family: "fontLatoBlack";
-  src: url("../plugin/fonts/lato/Lato-Black.ttf");
+  src: url("../../plugin/fonts/lato/Lato-Black.ttf");
 }
 
 @font-face {
   font-family: "fontLatoBold";
-  src: url("../plugin/fonts/lato/Lato-Bold.ttf");
+  src: url("../../plugin/fonts/lato/Lato-Bold.ttf");
 }
 
 .fontGraphikMedium {
