--- a/styles/Locuscare/Locuscare.scss
+++ b/styles/Locuscare/Locuscare.scss
@@ -135,12 +135,12 @@ $panelcount: 5; // set # of panels/sections here
 
 @font-face {
     font-family: "fontLatoRegular";
-    src        : url("../plugin/fonts/lato/Lato-Regular.ttf");
+    src        : url("../../plugin/fonts/lato/Lato-Regular.ttf");
 }
 
 @font-face {
     font-family: "fontLatoBlack";
-    src        : url("../plugin/fonts/lato/Lato-Black.ttf");
+    src        : url("../../plugin/fonts/lato/Lato-Black.ttf");
 }
 
 @font-face {
@@ -1249,6 +1249,62 @@ svg {
     {
         margin-left:-15px !important;
     }
+    .colomn_div {
+        .icon_1 {
+            margin-top      : 0px;
+            padding         : 0;
+            display         : flex;
+            display         : flex;
+            border-radius   : 50px;
+            position        : absolute;
+            left            : 10px;
+            height          : 50px;
+            text-align      : center;
+            width           : 50px;
+            background-color: #FFFFFF;
+            vertical-align  : middle;
+            border          : 1px solid #222C5D1A;
+            box-shadow: 1px 2px 0px #222C5D1A;
+             border: 1px solid #222C5D1A;
+    
+            
+           
+        }
+       
+        .fa_icon {
+            margin-top      : 0px;
+            padding         : 0;
+            display         : flex;
+            background-color: white;
+            border-radius   : 50px;
+            position        : absolute;
+            left            : 0px;
+           
+            height          : 50px;
+            text-align      : center;
+            width           : 50px;
+            vertical-align  : middle;
+            border          : 1px solid #222C5D1A;
+        }
+    
+        .sub_heads {
+            .ddhead {
+                letter-spacing: 0px;
+                color         : #767A82;
+                opacity       : 1;
+                font-family   : "fontNova";
+                font-size     : 13px;
+            }
+    
+            .dtsub {
+                letter-spacing: 0px;
+                color         : #212529;
+                opacity       : 1;
+                font-family   : "fontNova";
+                font-size     : 15px;
+            }
+        }
+    }
     .head_details .para_1 {
         line-height: 2.2rem;
         text-align: left;
@@ -1263,6 +1319,9 @@ svg {
         padding-right: 0% !important;
         padding-top: 1%;
     }
+
+
+
     
     .section_4
     {
