--- a/styles/csk/csk.scss
+++ b/styles/csk/csk.scss
@@ -106,6 +106,7 @@
         padding: 60px 0px;
     
   }
+  
   .understanding_title {
     color: #0066b3;
     text-align: center;
@@ -128,8 +129,8 @@
   }
   .Title_details
   {
-      font-size: 16px;
-      line-height: 2.5rem;
+      font-size: 18px !important;
+      line-height: 2.9rem !important;
       font-family: "fontNova";
       color: #848484;
       font-weight: 700;
@@ -140,7 +141,7 @@
   }
   .understanding_details {
     padding-top: 20px;
-    font-size: 16px;
+    font-size: 18px;
     color: #848484;
     text-align: center;
     font-family: "fontNova";
@@ -149,7 +150,7 @@
   .rebranding_content
   {
   
-    font-size: 16px;
+    font-size: 18px;
     color: #848484;
     text-align:left;
     padding:20px 0px 0px 0px;
@@ -214,19 +215,19 @@
   }
   .typography_bold_text {
     color: #191710;
-    font-size: 16px;
+    font-size: 18px;
     font-weight: bold;
     font-family: "fontNova";
   }
   .typography_bold_text_1{
     color: #191710;
-    font-size: 16px;
+    font-size: 18px;
    
     font-family: "fontNova";
   }
   .typography_semibold_text {
     color: #848484;
-    font-size: 16px;
+    font-size: 18px;
     font-family: "fontNova";
   }
   .typography_regular_text {
@@ -460,7 +461,7 @@
 .before-effect-main-div {
 
   margin-top:0px !important;
-  height:550px !important;
+  height:100% !important;
 }
 @media only screen and (max-width: 1025px) {
 
