--- a/styles/styles.css
+++ b/styles/styles.css
@@ -682,6 +682,21 @@ svg {
   color: #665CD7;
 }
 
+.dropdown #saasmetrics {
+  margin: 0;
+  width: 100%;
+  color: black;
+  display: block;
+  padding: 0px 0px;
+  font-size: 4px;
+  border-bottom: 1px solid #6c757d1f;
+  text-align: left;
+}
+
+.dropdown #saasmetrics:hover {
+  color: #665CD7;
+}
+
 .bulletin {
   margin-bottom: 15px;
 }
