--- a/styles/Locuscare/Locuscare.css
+++ b/styles/Locuscare/Locuscare.css
@@ -39,32 +39,32 @@ body {
 
 @font-face {
   font-family: "fontGraphikBold";
-  src: url("../../plugin/fonts/graphik/GraphikBold.otf");
+  src: url("../plugin/fonts/graphik/GraphikBold.otf");
 }
 
 @font-face {
   font-family: "fontGraphikMedium";
-  src: url("../../plugin/fonts/graphik/GraphikMedium.otf");
+  src: url("../plugin/fonts/graphik/GraphikMedium.otf");
 }
 
 @font-face {
   font-family: "fontGraphikLight";
-  src: url("../../plugin/fonts/graphik/GraphikLight.otf");
+  src: url("../plugin/fonts/graphik/GraphikLight.otf");
 }
 
 @font-face {
   font-family: "fontGraphikSemibold";
-  src: url("../../plugin/fonts/graphik/GraphikSemibold.otf");
+  src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
 }
 
 @font-face {
   font-family: "fontGraphikRegular";
-  src: url("../../plugin/fonts/graphik/GraphikRegular.otf");
+  src: url("../plugin/fonts/graphik/GraphikRegular.otf");
 }
 
 @font-face {
   font-family: "fontNova";
-  src: url("../../plugin/fonts/HKNova-Medium.otf");
+  src: url("../plugin/fonts/HKNova-Medium.otf");
 }
 
 @font-face {
@@ -79,7 +79,7 @@ body {
 
 @font-face {
   font-family: "fontLatoBold";
-  src: url("../../plugin/fonts/lato/Lato-Bold.ttf");
+  src: url("../plugin/fonts/lato/Lato-Bold.ttf");
 }
 
 .fontGraphikMedium {
@@ -1150,6 +1150,56 @@ svg {
   }
   .section_2 {
     margin-left: -15px !important;
+  }
+  .colomn_div .icon_1 {
+    margin-top: 0px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    display: flex;
+    border-radius: 50px;
+    position: absolute;
+    left: 10px;
+    height: 50px;
+    text-align: center;
+    width: 50px;
+    background-color: #FFFFFF;
+    vertical-align: middle;
+    border: 1px solid #222C5D1A;
+    -webkit-box-shadow: 1px 2px 0px #222C5D1A;
+            box-shadow: 1px 2px 0px #222C5D1A;
+    border: 1px solid #222C5D1A;
+  }
+  .colomn_div .fa_icon {
+    margin-top: 0px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    background-color: white;
+    border-radius: 50px;
+    position: absolute;
+    left: 0px;
+    height: 50px;
+    text-align: center;
+    width: 50px;
+    vertical-align: middle;
+    border: 1px solid #222C5D1A;
+  }
+  .colomn_div .sub_heads .ddhead {
+    letter-spacing: 0px;
+    color: #767A82;
+    opacity: 1;
+    font-family: "fontNova";
+    font-size: 13px;
+  }
+  .colomn_div .sub_heads .dtsub {
+    letter-spacing: 0px;
+    color: #212529;
+    opacity: 1;
+    font-family: "fontNova";
+    font-size: 15px;
   }
   .head_details .para_1 {
     line-height: 2.2rem;
