worked on seo changes

--- a/styles/managedcare/managedcare.scss
+++ b/styles/managedcare/managedcare.scss
@@ -25,17 +25,17 @@
 
 @font-face {
     font-family: "fontGraphikMedium";
-    src        : url("../plugin/fonts/graphik/GraphikMedium.otf");
+    src        : url("../../plugin/fonts/graphik/GraphikMedium.otf");
 }
 
 @font-face {
     font-family: "fontGraphikLight";
-    src        : url("../plugin/fonts/graphik/GraphikLight.otf");
+    src        : url("../../plugin/fonts/graphik/GraphikLight.otf");
 }
 
 @font-face {
     font-family: "fontGraphikSemibold";
-    src        : url("../plugin/fonts/graphik/GraphikSemibold.otf");
+    src        : url("../../plugin/fonts/graphik/GraphikSemibold.otf");
 }
 
 @font-face {
@@ -46,22 +46,22 @@
 
 @font-face {
     font-family: "fontNova";
-    src        : url("../plugin/fonts/HKNova-Medium.otf");
+    src        : url("../../plugin/fonts/HKNova-Medium.otf");
 }
 
 @font-face {
     font-family: "fontLatoRegular";
-    src        : url("../plugin/fonts/lato/Lato-Regular.ttf");
+    src        : url("../../plugin/fonts/lato/Lato-Regular.ttf");
 }
 
 @font-face {
     font-family: "fontLatoBlack";
-    src        : url("../plugin/fonts/lato/Lato-Black.ttf");
+    src        : url("../../plugin/fonts/lato/Lato-Black.ttf");
 }
 
 @font-face {
     font-family: "fontLatoBold";
-    src        : url("../plugin/fonts/lato/Lato-Bold.ttf");
+    src        : url("../../plugin/fonts/lato/Lato-Bold.ttf");
 }
 
 
